src/schema/snapshots/schermz__schema__tests__array_of_objects_optional_field.snap
---
source: src/schema/tests.rs
assertion_line: 368
expression: "Schema::from_json(&json, true).to_json()"
---
{
  "items": {
    "types": [
      {
        "ARRAY": [
          {
            "a": {
              "types": [
                "NUMBER"
              ]
            },
            "b": {
              "optional": true,
              "types": [
                "NUMBER"
              ]
            }
          }
        ]
      }
    ]
  }
}
