src/schema/snapshots/schermz__schema__tests__array_of_primitives_only.snap
---
source: src/schema/tests.rs
assertion_line: 74
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "tags": {
    "types": [
      {
        "ARRAY": [
          "NUMBER",
          "NULL",
          "BOOL",
          "STRING(4, 5)"
        ]
      }
    ]
  }
}
