src/schema/snapshots/schermz__schema__tests__bool_only_field_skips_values.snap
---
source: src/schema/tests.rs
assertion_line: 488
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "active": {
    "types": [
      "BOOL"
    ]
  }
}
