src/schema/snapshots/schermz__schema__tests__bool_values.snap
---
source: src/schema/tests.rs
assertion_line: 49
expression: "Schema::from_json(&json, false).to_json()"
---
{
  "active": {
    "types": [
      "BOOL"
    ]
  },
  "verified": {
    "types": [
      "BOOL"
    ]
  }
}
