src/schema/snapshots/schermz__schema__tests__custom_threshold_admits_more_values.snap
---
source: src/schema/tests.rs
assertion_line: 425
expression: "Schema::from_json(&json, false, 100).to_json()"
---
{
  "k": {
    "types": [
      "STRING(2, 3)"
    ],
    "values": [
      "v0",
      "v1",
      "v10",
      "v11",
      "v12",
      "v13",
      "v14",
      "v15",
      "v16",
      "v17",
      "v18",
      "v19",
      "v2",
      "v20",
      "v21",
      "v22",
      "v23",
      "v24",
      "v25",
      "v26",
      "v27",
      "v28",
      "v29",
      "v3",
      "v30",
      "v4",
      "v5",
      "v6",
      "v7",
      "v8",
      "v9"
    ]
  }
}
