src/schema/snapshots/schermz__schema__tests__deeply_nested_objects.snap
---
source: src/schema/tests.rs
assertion_line: 66
expression: "Schema::from_json(&json, false, 30).to_json()"
---
{
  "a": {
    "types": [
      {
        "b": {
          "types": [
            {
              "c": {
                "types": [
                  {
                    "d": {
                      "types": [
                        {
                          "value": {
                            "types": [
                              "STRING(4)"
                            ],
                            "values": [
                              "deep"
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}
